# CardGame

./: CMakeLists.txt  buildInstructions.txt  notesonGPUpipeline.txt
include/: Game.h  Shader.h
saves/: floatingcube.txt  owlthing.txt  triangles.txt  twotrianglesmovingon.txt
shaders/: greentest.glsl  shaderlearningf.glsl  shaderlearningv.glsl
src/: Game.cpp  ResourceManager.cpp  Shader.cpp  main.cpp  stb_image.cpp
